--- a/templates/organization/list.html.twig
+++ b/templates/organization/list.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
 {% for organization in organizations %}
-    {% organization.name %}
+    {{ organization.name }}
 {% endfor %}
 {% endblock %}
