--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,13 @@
                             <a href="{{path('survey_templates_create')}}" class="dropdown-item">Create</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" id="navSurveyTemplatesMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Surveys</a>
+                        <div class="dropdown-menu" aria-labelledby="navSurveyTemplatesMenuLink">
+                            <a href="{{path('surveys_list')}}" class="dropdown-item">List</a>
+                            <a href="{{path('surveys_add')}}" class="dropdown-item">Create</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </nav>
