--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,9 @@
                     <li class="nav-item">
                         <a href="/" class="nav-link">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="{{ path("organizations_list") }}" class="nav-link">Organizations</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" id="navQuestionsDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Questions</a>
                         <div class="dropdown-menu" aria-labelledby="navQuestionsDropdownMenuLink">
