--- a/templates/organization/list.html.twig
+++ b/templates/organization/list.html.twig
@@ -1,7 +1,17 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-{% for organization in organizations %}
-    {{ organization.name }}
-{% endfor %}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <ul class="list-group">
+                {% for organization in organizations %}
+                <li class="list-group-item">
+                    <a href="{{path("organization_surveys", {id: organization.id})}}">{{ organization.name }}</a>
+                </li>    
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
 {% endblock %}
