--- a/templates/survey/response_form.html.twig
+++ b/templates/survey/response_form.html.twig
@@ -4,7 +4,7 @@
 	<div class="row">
 		<div class="col">
 			<!-- <form action="" method="POST"> -->
-				{{ form_start(form)}}
+				{# {{ form_start(form)}}
 
 				{% for question in questions %}
 
@@ -37,8 +37,18 @@
 
 				{% endfor %}
 				<input type="submit" value="submit">
-				{{form_end(form)}}
+				{{form_end(form)}} #}
 			<!-- </form> -->
+			{{form_start(form)}}
+				{% for response in responses %}
+					<label for="{{response.id}}">{{response.question.question}}</label>
+					{% if response.question.type == 1 %}
+						<input type="text" name="{{response.id}}" id="" value="{{response.answer|default('')}}">
+					{% endif %}
+					
+				{% endfor %}
+				<input type="submit" value="submit">
+			{{form_end(form)}}
 		</div>
 	</div>
 </div>
