--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -4,9 +4,8 @@
 <div class="container-xl">
 	<div class="row">
 		<div class="col">
-			<h1>Add an Organization</h1>
-			{{ form(form) }}
+			<h1>This is the dashboard. Nothing is here yet but you are logged in.</h1>
 		</div>
 	</div>
 </div>
-{% endblock body %}
+{% endblock %}
