--- a/templates/survey/response_form.html.twig
+++ b/templates/survey/response_form.html.twig
@@ -3,49 +3,31 @@
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<!-- <form action="" method="POST"> -->
-				{# {{ form_start(form)}}
-
-				{% for question in questions %}
-
-					<label for="{{question.id}}">{{question.question}}</label>
-
-					{% if (question.type == 1) %}
-						<input type="text" name="{{question.id}}" id="">
-					{% endif %}
-
-					{% if (question.type == 2) %}
-						<textarea name="{{question.id}}" id="" cols="30" rows="10"></textarea>
-					{% endif %}
-
-					{% if (question.type == 3) %}
-						<input type="number" name="{{question.id}}" id="">
-					{% endif %}
-
-					{% if (question.type == 4) %}
-						<input type="radio" name="{{question.id}}" value="true" id="">
-						<input type="radio" name="{{question.id}}" value="false" id="">
-					{% endif %}
-
-					{% if (question.type == 5) %}
-						<select type="text" name="{{question.id}}" id="">
-							{% for option in question.options|split(',') %}
-								<option value="{{option}}">{{option}}</option>
-							{% endfor %}
-						</select>
-					{% endif %}
-
-				{% endfor %}
-				<input type="submit" value="submit">
-				{{form_end(form)}} #}
-			<!-- </form> -->
 			{{form_start(form)}}
 				{% for response in responses %}
 					<label for="{{response.id}}">{{response.question.question}}</label>
+
 					{% if response.question.type == 1 %}
 						<input type="text" name="{{response.id}}" id="" value="{{response.answer|default('')}}">
-					{% endif %}
+
+					{% elseif response.question.type == 2 %}
+						<textarea name="{{response.id}}" id="" value="{{response.answer|default('')}}"></textarea>
+
+					{% elseif response.question.type == 3 %}
+						<input type='number' name="{{response.id}}" id="" value="{{response.answer|default('')}}">
+
+					{% elseif response.question.type == 4 %}
+						<input type='radio' name="{{response.id}}" id="" value="true">
+						<input type='radio' name="{{response.id}}" id="" value="false">
+
+					{% elseif response.question.type == 5 %}
+					<select name="{{response.id}}" id="">
+						{% for option in response.question.options|split(',') %}
+							<option value="{{option}}">{{option}}</option>
+						{% endfor %}
+					</select>
 					
+					{% endif %}
 				{% endfor %}
 				<input type="submit" value="submit">
 			{{form_end(form)}}
