--- a/templates/survey/response_form.html.twig
+++ b/templates/survey/response_form.html.twig
@@ -30,7 +30,7 @@
 					{% endif %}
 				{% endfor %}
 
-				{{ form_row(form.survey.status)}}
+				{{ form_row(form.git)}}
 				{{ form_row(form._token) }}
 				<input type="submit" value="submit">
 				{{form_end(form, {'render_rest': false})}}
