--- a/templates/organization/form.html.twig
+++ b/templates/organization/form.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container-xl">
-	<div class="row">
+	<div class="row py-4">
 		<div class="col">
 			<h1>Add an Organization</h1>
 			{{ form(form) }}
