--- a/templates/organization/surveys.html.twig
+++ b/templates/organization/surveys.html.twig
@@ -2,12 +2,19 @@
 
 {% block body %}
 <div class="container">
-	<div class="row">
-		{% for survey in open_surveys %}
-			<div class="col">
-				<a href="{{ path("surveys_response", {id: survey.id}) }}">{{ survey.surveyTemplate.name }}</a>
-			</div>
-		{% endfor %}
+	<div class="row py-4">
+		<div class="col">
+			{% for survey in open_surveys %}
+			<ul class="list-group">
+				<li class="list-group-item">
+					<a href="{{ path("surveys_response", {id: survey.id}) }}">
+						<span class="badge badge-{{ survey.status == 2 ? 'secondary' : 'primary' }}">{{ survey.status == 2 ? 'closed' : 'open' }}</span>
+						{{ survey.surveyTemplate.name }}
+					</a>
+				</li>
+			</ul>
+			{% endfor %}
+		</div>
 	</div>
 </div>
 {% endblock %}
