--- a/templates/survey/list.html.twig
+++ b/templates/survey/list.html.twig
@@ -1,14 +1,20 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
 <div class="container">
-	<div class="row">
-		{% for survey in surveys %}
-			<div class="col">
-				{{ survey.id }}
-			</div>
-		{% endfor %}
+	<div class="row py-4">
+		<div class="col">
+			<ul class="list-group">
+				{% for survey in surveys %}
+					<li class="list-group-item">
+						<span class="badge badge-{{ survey.status == 2 ? 'secondary' : 'primary' }}">{{ survey.status == 2 ? 'closed' : 'open' }}</span>
+						<a href="{{ path("surveys_response", { id: survey.id }) }}">{{ survey.surveyTemplate.name }} | <strong>{{survey.organization.name}}</strong></a>
+						<a href="" class=" btn btn-link text-danger float-right">Delete</a>
+						<a href="" class="btn text-secondary float-right">Close Survey</a>
+					</li>
+				{% endfor %}
+			</ul>
+		</div>
 	</div>
 </div>
 
