--- a/templates/question/form.html.twig
+++ b/templates/question/form.html.twig
@@ -1,5 +1,11 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-{{ form(form) }}
+<div class="container">
+	<div class="row py-4">
+		<div class="col">
+			{{ form(form) }}
+		</div>
+	</div>
+</div>
 {% endblock %}
