--- a/templates/question/list.html.twig
+++ b/templates/question/list.html.twig
@@ -1,11 +1,22 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-
-{% for question in questions %}
-{{ question.id}}
-{{ question.question}}
-{{ question.options}}
-{% endfor %}
+<div class="container">
+	<div class="row py-4">
+		<div class="col">
+			{% for question in questions %}
+			<ul class="list-group">
+				<li class="list-group-item list-group-item-action my-1">
+					<div class="d-flex w-100 justify-content-between">
+						<h5 class="mb-1">{{ question.question}}</h5>
+						<small>ID: {{ question.id}}</small>
+					</div>
+					<small>{{ question.options}}</small>
+				</li>
+			</ul>
+			{% endfor %}
+		</div>
+	</div>
+</div>
 
 {% endblock %}
