--- a/templates/survey/form.html.twig
+++ b/templates/survey/form.html.twig
@@ -1,12 +1,9 @@
 {% extends "base.html.twig" %}
 {% block body %}
 <div class="container">
-	<div class="row">
+	<div class="row py-4">
 		<div class="col">
-			<!-- <form action="" method="POST"> -->
 				{{ form(form)}}
-
-			<!-- </form> -->
 		</div>
 	</div>
 </div>
