--- a/templates/survey/response_form.html.twig
+++ b/templates/survey/response_form.html.twig
@@ -1,8 +1,11 @@
 {% extends "base.html.twig" %}
 {% block body %}
 <div class="container">
-	<div class="row">
+	<div class="row my-4">
 		<div class="col">
+
+			<h4 class='py-3'><strong>{{ survey.surveyTemplate.name }}</strong> for {{ survey.organization.name }}</h4>
+
 			{{form_start(form)}}
 				{% for response in responses %}
 				<div class="form-group">
@@ -48,7 +51,7 @@
 				{{ form_row(form.survey.status)}}
 
 				{{ form_row(form._token) }}
-				<input type="submit" value="submit">
+				<input  class='btn btn-primary' type="submit" value="submit">
 				{{form_end(form, {'render_rest': false})}}
 		</div>
 	</div>
