--- a/templates/survey/template_form.html.twig
+++ b/templates/survey/template_form.html.twig
@@ -1,9 +1,11 @@
 {% extends "base.html.twig" %}
 {% block body %}
 	<div class="container">
-		<div class="row">
-			<h1>Add a survey templates</h1>
-			{{form(form)}}
+		<div class="row py-4">
+			<div class="col">
+				<h1>Add a survey templates</h1>
+				{{form(form)}}
+			</div>
 		</div>
 	</div>
 {% endblock %}
