--- a/templates/question/list.html.twig
+++ b/templates/question/list.html.twig
@@ -6,7 +6,7 @@
 		<div class="col">
 			{% for question in questions %}
 			<ul class="list-group">
-				<li class="list-group-item list-group-item-action my-1">
+				<li class="list-group-item my-1">
 					<div class="d-flex w-100 justify-content-between">
 						<h5 class="mb-1">{{ question.question}}</h5>
 						<small>ID: {{ question.id}}</small>
