fixed incorrect link

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
                                 <div class="dropdown-menu" aria-labelledby="navQuestionsDropdownMenuLink">
                                     <a href="{{path('organizations_list')}}" class="dropdown-item">List</a>
                                     <a href="{{path('organizations_add')}}" class="dropdown-item">Create</a>
-                                    <a href="{{path('tags_add')}}" class="dropdown-item">Tags</a>
+                                    <a href="{{path('tags_list')}}" class="dropdown-item">Tags</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
