--- a/templates/survey/list.html.twig
+++ b/templates/survey/list.html.twig
@@ -28,7 +28,7 @@
 					<li class="list-group-item">
 						<span class="badge badge-{{ survey.status == 2 ? 'secondary' : 'success' }}">{{ survey.status == 2 ? 'closed' : 'open' }}</span>
 						<a href="{{ path("surveys_response", { id: survey.id }) }}">{{ survey.surveyTemplate.name }}</a> | <a class="font-weight-bold" href="{{ path("organization_surveys", {id: survey.organization.id}) }}">{{survey.organization.name}}</a>
-						<a href="{{ path("surveys_delete", {id: survey.id}) }}" class=" btn btn-link text-danger float-right">Delete</a>
+						<a onClick="return confirm('This will delete all responses for this survey. Are you sure you want to proceed?')" href="{{ path("surveys_delete", {id: survey.id}) }}" class=" btn btn-link text-danger float-right">Delete</a>
 						<a href="" class="btn text-secondary float-right">Close Survey</a>
 					</li>
 				{% endfor %}
