--- a/templates/tags/form.html.twig
+++ b/templates/tags/form.html.twig
@@ -4,7 +4,7 @@
 <div class="container-xl">
 	<div class="row py-4">
 		<div class="col">
-			<h1>Add a tag</h1>
+			<h1>Add/Edit Tag</h1>
 			{{ form(form) }}
 		</div>
 	</div>
