--- a/templates/survey/response_form.html.twig
+++ b/templates/survey/response_form.html.twig
@@ -17,7 +17,7 @@
 						<input class="form-control" type="text" name="{{response.id}}" id="" value="{{response.answer|default('')}}">
 						
 						{% elseif response.question.type == 2 %}
-						<textarea class="form-control" name="{{response.id}}" id="" value="{{response.answer|default('')}}"></textarea>
+						<textarea class="form-control" name="{{response.id}}" id="">{{response.answer|default('')}}</textarea>
 						
 						{% elseif response.question.type == 3 %}
 						<input class="form-control" type='number' name="{{response.id}}" id="" value="{{response.answer|default('')}}">
