--- a/templates/organization/list.html.twig
+++ b/templates/organization/list.html.twig
@@ -27,8 +27,8 @@
                 {% endfor %}
 
                 <li class="list-group-item">
-                    <a href="{{path("organization_surveys", {id: organization.id})}}">{{ organization.name }}</a>
-                    <a href="{{ path("organizations_edit", {id: organization.id}) }}" class="btn btn-link text-secondary">Edit</a>
+                    <a href="{{path("organizations_edit", {id: organization.id})}}">{{ organization.name }}</a>
+                    <a href="{{ path("organization_surveys", {id: organization.id}) }}" class="btn btn-link text-secondary">Surveys</a>
                     <a onClick='return confirm("This will delete all open and closed surveys ({{ organization.surveys|length() }}) for this organization. Are you sure you want to proceed?")' href="{{ path("organizations_delete", {id: organization.id}) }}" class="btn btn-link text-danger">Delete</a>
                     {% if openSurveys > 0 %}
                     <span class="float-right badge badge-primary">{{ openSurveys }} Open Survey(s)</span>
