--- a/templates/organization/form.html.twig
+++ b/templates/organization/form.html.twig
@@ -6,7 +6,7 @@
 		<div class="col-sm-12 col-md-6">
 			<div class="row">
 				<div class="col">
-					<h1>Add/Edit Organization</h1>
+					<h1>Add/Edit Company</h1>
 					{{ form(form) }}
 				</div>
 			</div>
