--- a/templates/survey/response_form.html.twig
+++ b/templates/survey/response_form.html.twig
@@ -61,13 +61,15 @@
 	<div class="col-sm-12 col-md-4">
 		<div class="row">
 			<div class="col-12">
-				<h5>{{ organization.contactPerson }}</h5>
-				<li>
-					Ph: {{ organization.contactPhoneNumber }}
-				</li>
-				<li>
-					Em: {{ organization.contactEmail }}
-				</li>
+				<h5>{{ organization.contactPerson ?? 'No contact name' }}</h5>
+				<ul>
+					<li>
+						{{ organization.contactPhoneNumber ?? 'No phone number' }}
+					</li>
+					<li>
+						{{ organization.contactEmail ?? 'No contact email' }}
+					</li>
+				</ul>
 			</div>
 		</div>
 		<div class="row">
@@ -81,6 +83,12 @@
 						<div class="card-body bg-light">
 							<p>{{ contactAction.note }}</p>
 							<p class="small"><strong>{{ contactAction.user.email }}</strong> at {{ contactAction.timeStamp|date('m/d/y h:i')}}</p>
+							{% if contactAction.emails is not empty %}
+								<span class="badge badge-info"><i class="material-icons">email</i></span>
+							{% endif %}
+							{% if contactAction.phoneCalls is not empty %}
+								<span class="badge badge-info"><i class="material-icons">phone</i></span>
+							{% endif %}
 						</div>
 					</div>
 				{% endfor %}
